# vt-search

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
openapi/: Cargo.toml  README.md
openapi/docs/: JourneysApi.md  LocationsApi.md  MicrosoftPeriodAspNetCorePeriodMvcPeriodProblemDetails.md  PositionsApi.md  StopAreasApi.md  StopPointsApi.md  VtPeriodApiPlaneraResaPeriodCorePeriodModelsPeriodDateTimeRelatesToType.md  VtPeriodApiPlaneraResaPeriodCorePeriodModelsPeriodNote.md  VtPeriodApiPlaneraResaPeriodCorePeriodModelsPeriodPositionTransportMode.md  VtPeriodApiPlaneraResaPeriodCorePeriodModelsPeriodTimeLimitation.md  VtPeriodApiPlaneraResaPeriodCorePeriodModelsPeriodTimeValidityType.md  VtPeriodApiPlaneraResaPeriodCorePeriodModelsPeriodTimeValidityUnit.md  VtPeriodApiPlaneraResaPeriodCorePeriodModelsPeriodTransportMode.md  VtPeriodApiPlaneraResaPeriodCorePeriodModelsPeriodTransportSubMode.md  VtPeriodApiPlaneraResaPeriodCorePeriodModelsPeriodTravellerCategory.md  VtPeriodApiPlaneraResaPeriodWebPeriodV4PeriodModelsPeriodApiError.md  VtPeriodApiPlaneraResaPeriodWebPeriodV4PeriodModelsPeriodArrivalDetailsIncludeType.md  VtPeriodApiPlaneraResaPeriodWebPeriodV4PeriodModelsPeriodCoordinateApiModel.md  VtPeriodApiPlaneraResaPeriodWebPeriodV4PeriodModelsPeriodDepartureDetailsIncludeType.md  VtPeriodApiPlaneraResaPeriodWebPeriodV4PeriodModelsPeriodDeparturesAndArrivalsPeriodArrivalApiModel.md  VtPeriodApiPlaneraResaPeriodWebPeriodV4PeriodModelsPeriodDeparturesAndArrivalsPeriodArrivalDetailsApiModel.md  (+69 more)
openapi/src/apis/: configuration.rs  (+6 more)
src/: main.rs  vasttrafik.rs
(+88 files in other folders)
